--- a/docker-compose-v3.yml
+++ b/docker-compose-v3.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   namenode:
-    image: bde2020/hadoop-namenode:2.0.0-hadoop3.3.1-java11
+    image: hadoop-namenode:2.0.0-hadoop3.3.1-java11
     networks:
       - hbase
     volumes:
@@ -24,7 +24,7 @@ services:
         traefik.port: 50070
 
   datanode:
-    image: bde2020/hadoop-datanode:2.0.0-hadoop3.3.1-java11
+    image: hadoop-datanode:2.0.0-hadoop3.3.1-java11
     networks:
       - hbase
     volumes:
@@ -42,7 +42,7 @@ services:
         traefik.port: 50075
 
   resourcemanager:
-    image: bde2020/hadoop-resourcemanager:2.0.0-hadoop3.3.1-java11
+    image: hadoop-resourcemanager:2.0.0-hadoop3.3.1-java11
     networks:
       - hbase
     environment:
@@ -64,7 +64,7 @@ services:
       disable: true
 
   nodemanager:
-    image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.3.1-java11
+    image: hadoop-nodemanager:2.0.0-hadoop3.3.1-java11
     networks:
       - hbase
     environment:
@@ -80,7 +80,7 @@ services:
         traefik.port: 8042
 
   historyserver:
-    image: bde2020/hadoop-historyserver:2.0.0-hadoop3.3.1-java11
+    image: hadoop-historyserver:2.0.0-hadoop3.3.1-java11
     networks:
       - hbase
     volumes:
@@ -100,10 +100,11 @@ services:
         traefik.port: 8188
 
 volumes:
-  datanode:
-  namenode:
+  datanode: null
+  namenode: null
   hadoop_historyserver:
 
+    null
 networks:
   hbase:
     external:
