--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: "3"
+version: "3.8"
 
 services:
   namenode:
-    image: bde2020/hadoop-namenode:2.0.0-hadoop3.3.1-java11
+    build:
+      context: ./namenode
     container_name: namenode
     restart: always
     ports:
@@ -15,7 +16,8 @@ services:
       - ./hadoop.env
 
   datanode:
-    image: bde2020/hadoop-datanode:2.0.0-hadoop3.3.1-java11
+    build:
+      context: ./datanode
     container_name: datanode
     restart: always
     volumes:
@@ -24,9 +26,10 @@ services:
       SERVICE_PRECONDITION: "namenode:9870"
     env_file:
       - ./hadoop.env
-  
+
   resourcemanager:
-    image: bde2020/hadoop-resourcemanager:2.0.0-hadoop3.3.1-java11
+    build:
+      context: ./resourcemanager
     container_name: resourcemanager
     restart: always
     ports:
@@ -36,17 +39,19 @@ services:
     env_file:
       - ./hadoop.env
 
-  nodemanager1:
-    image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.3.1-java11
+  nodemanager:
     container_name: nodemanager
+    build:
+      context: ./nodemanager
     restart: always
     environment:
       SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
     env_file:
       - ./hadoop.env
-  
+
   historyserver:
-    image: bde2020/hadoop-historyserver:2.0.0-hadoop3.3.1-java11
+    build:
+      context: ./historyserver
     container_name: historyserver
     restart: always
     ports:
@@ -57,8 +62,8 @@ services:
       - hadoop_historyserver:/hadoop/yarn/timeline
     env_file:
       - ./hadoop.env
-  
+
 volumes:
-  hadoop_namenode:
-  hadoop_datanode:
-  hadoop_historyserver:
+  hadoop_namenode: null
+  hadoop_datanode: null
+  hadoop_historyserver: null
