--- a/namenode/Dockerfile
+++ b/namenode/Dockerfile
@@ -1,7 +1,5 @@
 ARG HADOOP_BASE_VERSION=2.0.0-hadoop3.3.1-java11
-FROM bde2020/hadoop-base:$HADOOP_BASE_VERSION
-
-MAINTAINER Ivan Ermilov <ivan.s.ermilov@gmail.com>
+FROM hadoop-base:$HADOOP_BASE_VERSION
 
 HEALTHCHECK CMD curl -f http://localhost:9870/ || exit 1
 
