--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
-version: "3.8"
+version: '3.8'
 
 services:
   namenode:
     build:
       context: ./namenode
     container_name: namenode
-    restart: always
+    restart: on-failure
     ports:
       - 9870:9870
+      - 9000:9000
+      - 80:9870
     volumes:
       - hadoop_namenode:/hadoop/dfs/name
     environment:
@@ -19,41 +21,52 @@ services:
     build:
       context: ./datanode
     container_name: datanode
-    restart: always
+    hostname: datanode
+    restart: on-failure
+    ports:
+      - 9864:9864
     volumes:
       - hadoop_datanode:/hadoop/dfs/data
     environment:
       SERVICE_PRECONDITION: "namenode:9870"
     env_file:
       - ./hadoop.env
+    depends_on:
+      - namenode
 
   resourcemanager:
     build:
       context: ./resourcemanager
     container_name: resourcemanager
-    restart: always
+    restart: on-failure
     ports:
       - 8088:8088
     environment:
       SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864"
     env_file:
       - ./hadoop.env
+    depends_on:
+      - namenode
+      - datanode
 
   nodemanager:
     container_name: nodemanager
     build:
       context: ./nodemanager
-    restart: always
+    restart: on-failure
     environment:
       SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
     env_file:
       - ./hadoop.env
+    depends_on:
+      - namenode
+      - datanode
 
   historyserver:
     build:
       context: ./historyserver
     container_name: historyserver
-    restart: always
+    restart: on-failure
     ports:
       - 8188:8188
     environment:
@@ -62,6 +75,9 @@ services:
       - hadoop_historyserver:/hadoop/yarn/timeline
     env_file:
       - ./hadoop.env
+    depends_on:
+      - namenode
+      - datanode
 
 volumes:
   hadoop_namenode: null
