--- a/submit/project/MapReduce/build.gradle
+++ b/submit/project/MapReduce/build.gradle
@@ -17,9 +17,8 @@ repositories {
 }
 
 dependencies {
-    // These dependencies are used by the application.
-    implementation 'org.apache.hadoop:hadoop-mapreduce-client-core:3.3.1'
-    implementation 'org.apache.hadoop:hadoop-common:3.3.1'
+    // This dependency is used by the application.
+    implementation 'org.apache.hadoop:hadoop-client:3.3.1'
 }
 
 application {
