Allow arbitrary target classnames

--- a/submit/Dockerfile
+++ b/submit/Dockerfile
@@ -3,7 +3,7 @@ FROM hadoop-base
 COPY project/MapReduce/build/libs/MapReduce.jar /opt/hadoop/applications/MapReduce.jar
 
 ENV JAR_FILEPATH="/opt/hadoop/applications/MapReduce.jar"
-ENV CLASS_TO_RUN="MapReduce"
+ARG CLASS_TO_RUN
 ENV PARAMS="/input /output"
 
 ADD run.sh /run.sh
